# chat-py

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-ci.yaml  docker-compose.yaml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
core/: .coverage  __init__.py  app.py  client.py  config.py  main.py  weather_commands_pb2.py  weather_commands_pb2.pyi  weather_commands_pb2_grpc.py
core/config/: config.py
core/database/: db.py
core/endpoints/: crud.py  endpoints.py  services.py
core/logger/: log.py  logger_config.py
core/namespaces/: namespaces.py
core/protos/: weather_commands.proto
core/rabbitmq/: reciever.py
core/schemas/: schemas.py
core/services/: chat_services.py  grpc_services.py  rabbit_services.py
core/settings/: settings.py
core/tests/: conftest.py  test_auth.py  test_data.py
rabbitmq/: config.py  consumer.py  consumer_service.py
src/: dependencies.py  main.py
src/api/: __init__.py  routers.py  types.py
src/api/query_schemas/: queries.py  schema.graphql
src/api/weather/: consumer.py  context_types.py  crud.py  endpoints.py  graphql.py  graphql_utils.py  queries.py  resolvers.py  schema.graphql  schemas.py  utils.py
src/core/: __init__.py  database.py
src/core/redis_tools/: tools.py
src/core/settings/: __init__.py  base.py  database.py  mongodb.py  settings.py  sqlalchemy.py  (+1 more)
src/migrations/: __init__.py  env.py  main.py
src/models/: __init__.py  mixins.py  model_weather.py
src/weather_api/: endpoints.py  main.py  schema.py  services.py  utils.py
tests/: conftest.py  test_get_weather_data.py
weather_api/: endpoints.py  main.py  schema.py
(+1 files in other folders)
