[tool.poetry]
name = "flask-user-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_user_service"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^2.3.2"}
motor = "^3.1.2"
python-dotenv = "^1.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
bcrypt = "^4.0.1"
pyjwt = "^2.7.0"
reorder-python-imports = "^3.9.0"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
marshmallow = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
